--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<pnvidia driver 설치
+<p>
+  
+nvidia driver 설치
 
 드라이버를 다운받는다.
 $cd Downloads 
@@ -230,7 +232,7 @@ $ sudo make; cp ./lib/libcudpp.a ~/gpmr/gpmr-master/lib
 
 
 
-
+</p>
 
 
 
